# Hamlet

./: .gitignore  Hamlet.cabal  LICENSE  README.md
src/: BitBoard.hs  EdaxProtocol.hs  Eval.hs  Main.hs  MoveGenerator.hs  ProofNumberSearch.hs  Search.hs  SlackMessenger.hs  Tree.hs
src/bench/: Main.hs
src/test/: Main.hs
